# os2mint-omada

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  RELEASE.md.template  docker-compose.yml  graphql_wip.py  init.config.yml  mypy.ini  pyproject.toml  queries.graphql  schema.graphql  todo.md
.gitlab/: autopub.sh
.reuse/: dep5
docs/: odata.dataobjects.identity.view.json
os2mint_omada/: api.py  app.py  clients.py  config.py  depends.py  events.py  fail_db.py  lora.py  main.py  metrics.py  mo.py  models.py  omada.py  sync.py  util.py
os2mint_omada/autogenerated_graphql_client/: __init__.py  _testing__create_employee.py  _testing__create_org_unit.py  _testing__create_org_unit_it_user.py  _testing__employee_query.py  _testing__get_employee.py  _testing__get_it_system.py  _testing__get_org_unit_type.py  async_base_client.py  base_model.py  client.py  create_address.py  create_employee.py  create_engagement.py  create_it_user.py  delete_address.py  delete_engagement.py  delete_it_user.py  enums.py  exceptions.py  get_classes.py  get_current_employee_state.py  get_employee_addresses.py  get_employee_engagements.py  get_employee_it_users.py  get_employee_states.py  get_employee_uuid_from_cpr.py  get_employee_uuid_from_user_key.py  get_employees.py  get_it_systems.py  get_org_unit_validity.py  get_org_unit_with_it_system_user_key.py  get_org_unit_with_user_key.py  get_org_unit_with_uuid.py  input_types.py  scalars.py
os2mint_omada/backing/: mo.py
os2mint_omada/backing/mo/: models.py  service.py
os2mint_omada/backing/omada/: api.py  event_generator.py  models.py  routing_keys.py  service.py
os2mint_omada/omada/: api.py  event_generator.py  models.py
os2mint_omada/sync/: address.py  base.py  employee.py  engagement.py  it_user.py  models.py
os2mint_omada/sync/egedal/: address.py  employee.py  engagement.py  events.py  it_user.py  models.py
os2mint_omada/sync/frederikshavn/: address.py  employee.py  engagement.py  events.py  it_user.py  models.py
os2mint_omada/sync/silkeborg/: address.py  employee.py  engagement.py  events.py  it_user.py  models.py
schemas/: frederikshavn.json  silkeborg.json
schemas/egedal/: odata.json  odata.xml
schemas/frederikshavn/: odata.json  odata.xml
schemas/silkeborg/: odata.json  odata.xml
tests/: conftest.py  test_api.py  test_config.py  test_events.py  test_lora.py  test_mo.py  test_mo_api.py  test_mo_service.py  test_models_egedal.py  test_models_frederikshavn.py  test_models_silkeborg.py  test_omada.py  test_omada_api.py  test_omada_event_generator.py  test_omada_events.py  test_omada_models.py  test_omada_models_silkeborg.py  test_omada_routing_keys.py  test_sync.py  test_sync_address.py  test_sync_engagement.py  test_util.py
tests/fakes/: fake_omada_api.py  omada_api.py
tests/integration/: conftest.py  test_egedal.py  test_frederikshavn.py  test_silkeborg.py  util.py
