[tool.poetry]
name = "os2mint_omada"
version = "0.0.0"  # versioning handled by conventional commits
description = "OS2mo Omada integration"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mint/os2mint-omada"
keywords = ["os2mo", "os2mint", "omada"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1"
structlog = "^24"
uvicorn = "^0.29"
httpx = "^0.27"
fastramqpi = "^9"
fastapi = "^0.112"
more-itertools = "^9"

# TODO(#59335): remove these
ramodels = "^18"
starlette = "^0.38"
gql = "^3"

[tool.poetry.group.pre-commit.dependencies]
mypy = "^1"
pre-commit = "^3"
ruff = "^0.4"
deptry = "^0.16"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-asyncio = "^0.23"
pytest-cov = "^5"
pytest-split = "^0.9"
asgi-lifespan = "^2"
respx = "^0.21"

[tool.poetry.group.dev.dependencies]
ariadne-codegen = {extras = ["subscriptions"], version = "^0.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ariadne-codegen]
# Ideally, the GraphQL client is generated as part of the build process and
# never committed to git. Unfortunately, most of our tools and CI analyses the
# project directly as it is in Git. In the future - when the CI templates
# operate on the built container image - only the definition of the schema and
# queries should be checked in.
#
# The default package name is `graphql_client`. Make it more obvious that the
# files are not to be modified manually.
target_package_name = "autogenerated_graphql_client"
target_package_path = "os2mint_omada/"
client_name = "GraphQLClient"
schema_path = "schema.graphql"  # curl -O http://localhost:5000/graphql/v19/schema.graphql
queries_path = "queries.graphql"
plugins = [
    # Return values directly when only a single top field is requested
    "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
]
[tool.ariadne-codegen.scalars.DateTime]
type = "datetime.datetime"
[tool.ariadne-codegen.scalars.UUID]
type = "uuid.UUID"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.deptry]
extend_exclude = [
  "os2mint_omada/autogenerated_graphql_client/*"
]

[tool.deptry.per_rule_ignores]
DEP002 = [
  # uvicorn is used by the Dockerfile
  "uvicorn",
]
